# tabletool

./: .gitignore  Cargo.toml
bytepack/: Cargo.toml
bytepack/bytepack_derive/: Cargo.toml
bytepack/bytepack_derive/src/: lib.rs
bytepack/src/: lib.rs  pack.rs  pack_pointer.rs  packer.rs  packer_format.rs  unpacker.rs
db/: Cargo.toml
db/src/: error.rs  field_type.rs  field_value.rs  lib.rs  record.rs  table.rs
db/src/db/: index_ext.rs  mod.rs  query_ext.rs  record_ext.rs  table_ext.rs  trigger_ext.rs
db_core/: Cargo.toml
db_core/src/: inline_pointer.rs  lib.rs  named.rs  record.rs  ty.rs  value.rs
db_core/src/defs/: index.rs  mod.rs  table.rs  trigger.rs
db_core/src/expr/: error.rs  eval_ctx.rs  expr.rs  mod.rs  op.rs  ty_ctx.rs
db_core/src/query/: mod.rs  result.rs
desktop/: Cargo.toml  Dioxus.toml
desktop/assets/: blog.css  dx-components-theme.css  main.css
desktop/src/: main.rs
desktop/src/views/: expr_page.rs  home.rs  info.rs  mod.rs  tables_page.rs  views_page.rs
query_parse/: Cargo.toml
query_parse/src/: lexer.rs  lib.rs  parser.rs  token.rs
ui/: Cargo.toml
ui/src/: hero.rs  id_card.rs  lib.rs  navbar.rs  record_dialog.rs  table.rs  table_dialog.rs
ui/src/components/: mod.rs
ui/src/components/alert_dialog/: style.css
ui/src/components/date_time_picker/: component.rs  style.css
ui/src/components/dialog/: style.css
ui/src/components/input/: style.css
ui/src/components/modal_button/: component.rs  ctx.rs  mod.rs  style.css
ui/src/components/table_tab_bar/: component.rs  style.css
