[workspace]
resolver = "2"
members = ["ui", "desktop", "db", "bytepack", "query_parse", "db_core"]

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# workspace
ui = { path = "ui" }
db = { path = "db" }
db_core = { path = "db_core" }
bytepack = { path = "bytepack" }
query_parse = { path = "query_parse" }
ulid = "1.2.1"
chrono = "0.4"
dioxus-free-icons = { version = "0.10", features = [
    "font-awesome-brands",
    "font-awesome-regular",
    "font-awesome-solid",
] }
thiserror = "2.0"

chumsky = { version = "1.0.0-alpha.8", features = ["pratt"] }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
