[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
chrono.workspace = true
ui.workspace = true
bytepack.workspace = true
db.workspace = true
db_core.workspace = true
query_parse.workspace = true

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

