[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-free-icons.workspace = true
chrono.workspace = true

db.workspace = true
db_core.workspace = true
bytepack.workspace = true
